<resources>
    <string name="app_name">Foody</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_recipes_fragment">Favorite</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="food_joke">Joke</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="drink">Drink</string>
    <string name="snack">Snack</string>
    <string name="fingerfood">FingerFood</string>
    <string name="marinade">Marinade</string>
    <string name="sauce">Sauce</string>
    <string name="beverage">Beverage</string>
    <string name="whole_30">Whole 30</string>
    <string name="primal">Primal</string>
    <string name="paleo">Paleo</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="apply_filter">Apply</string>
    <string name="search">Search</string>
    <string name="vegan">Vegan</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="no_favorite_recipe">No favorite recipe</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
	<string name="error">Error</string>
	<string name="share">Share</string>
	<string name="title">Title</string>
</resources>